[gd_scene load_steps=15 format=3 uid="uid://dkcjnca5vy83d"]

[ext_resource type="Script" path="res://Menus/player_number_selection.gd" id="1_0y32y"]
[ext_resource type="Texture2D" uid="uid://bd3eeolp5h22g" path="res://assets/Images/rectangleborderyellow.svg" id="1_gpqbf"]
[ext_resource type="PackedScene" uid="uid://cvgijvugy7wxe" path="res://assets/button_scene.tscn" id="2_pldgd"]
[ext_resource type="Texture2D" uid="uid://bgmppv2cfhcf6" path="res://assets/Images/luckydecklogo.png" id="3_sly2o"]
[ext_resource type="Theme" uid="uid://brkyelj36ne10" path="res://Scripts/maintheme.tres" id="4_u1d0b"]
[ext_resource type="Script" path="res://assets/returnButton.gd" id="5_by2kf"]

[sub_resource type="PlaceholderTexture2D" id="PlaceholderTexture2D_cqvo7"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_gpwuu"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_puhaq"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_qeg7c"]
bg_color = Color(0.309804, 0.00392157, 0.145098, 1)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_6pv0k"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_0vc4m"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_7dt22"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_rgy5p"]

[node name="playerNumberSelection" type="Panel"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_0y32y")

[node name="background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.0901961, 0.411765, 0.0352941, 1)

[node name="TextureRect" type="TextureRect" parent="background"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_gpqbf")

[node name="mainLayoutCredits" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 76.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 80

[node name="Heading Seperator" type="VBoxContainer" parent="mainLayoutCredits"]
layout_mode = 2
theme_override_constants/separation = 35

[node name="ButtonLogo" parent="mainLayoutCredits/Heading Seperator" instance=ExtResource("2_pldgd")]
custom_minimum_size = Vector2(0, 220)
layout_mode = 2

[node name="TextureRect3" type="TextureRect" parent="mainLayoutCredits/Heading Seperator/ButtonLogo"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -253.5
offset_top = -279.0
offset_right = 253.5
grow_horizontal = 2
grow_vertical = 0
texture = ExtResource("3_sly2o")
stretch_mode = 5

[node name="PlayersHeading" parent="mainLayoutCredits/Heading Seperator" instance=ExtResource("2_pldgd")]
layout_mode = 2

[node name="Label2" type="Label" parent="mainLayoutCredits/Heading Seperator/PlayersHeading"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -53.0
offset_top = -37.5
offset_right = 53.0
offset_bottom = 37.5
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("4_u1d0b")
theme_override_font_sizes/font_size = 60
text = "Number Of Players
"

[node name="playerButtons" parent="mainLayoutCredits" instance=ExtResource("2_pldgd")]
layout_mode = 2

[node name="totalPlayers" type="SpinBox" parent="mainLayoutCredits/playerButtons/TextureRect" index="0"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -106.0
offset_top = -40.0
offset_right = 106.0
offset_bottom = 40.0
grow_horizontal = 2
grow_vertical = 2
theme_override_icons/updown = SubResource("PlaceholderTexture2D_cqvo7")
min_value = 2.0
max_value = 1000.0
value = 2.0
rounded = true
allow_greater = true
alignment = 1

[node name="Minus" type="Button" parent="mainLayoutCredits/playerButtons"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.227
anchor_top = 0.5
anchor_right = 0.227
anchor_bottom = 0.5
offset_left = -62.44
offset_top = -35.0
offset_right = 62.56
offset_bottom = 37.0
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 0
theme_override_styles/normal = SubResource("StyleBoxEmpty_gpwuu")
theme_override_styles/hover = SubResource("StyleBoxEmpty_puhaq")
theme_override_styles/pressed = SubResource("StyleBoxFlat_qeg7c")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_6pv0k")
theme_override_styles/focus = SubResource("StyleBoxEmpty_0vc4m")

[node name="Label" type="Label" parent="mainLayoutCredits/playerButtons/Minus"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 6.0
offset_top = -99.0
offset_right = 6.0
offset_bottom = 73.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 200
text = "-"
horizontal_alignment = 1
vertical_alignment = 3

[node name="Plus" type="Button" parent="mainLayoutCredits/playerButtons"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.766
anchor_top = 0.5
anchor_right = 0.766
anchor_bottom = 0.5
offset_left = -62.52
offset_top = -32.0
offset_right = 62.48
offset_bottom = 35.0
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 0
theme_override_styles/normal = SubResource("StyleBoxEmpty_7dt22")
theme_override_styles/hover = SubResource("StyleBoxEmpty_puhaq")
theme_override_styles/pressed = SubResource("StyleBoxFlat_qeg7c")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_6pv0k")
theme_override_styles/focus = SubResource("StyleBoxEmpty_0vc4m")

[node name="Label" type="Label" parent="mainLayoutCredits/playerButtons/Plus"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 2.0
offset_top = -57.0
offset_right = 2.0
offset_bottom = 115.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 140
theme_override_styles/normal = SubResource("StyleBoxEmpty_rgy5p")
text = "+"
horizontal_alignment = 1
vertical_alignment = 3

[node name="Continue" parent="." instance=ExtResource("2_pldgd")]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.9
anchor_bottom = 0.978
offset_top = 0.0
offset_bottom = 0.159912

[node name="Label2" type="Label" parent="Continue"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -266.0
offset_top = -37.5
offset_right = 266.0
offset_bottom = 37.5
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("4_u1d0b")
theme_override_font_sizes/font_size = 60
text = "Continue"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Return2" parent="." instance=ExtResource("2_pldgd")]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.00138889
anchor_top = 0.798
anchor_right = 1.001
anchor_bottom = 0.877
offset_top = 0.559937
offset_right = 0.280762
offset_bottom = -0.560059
script = ExtResource("5_by2kf")
metadata/_edit_use_anchors_ = true

[node name="Label2" type="Label" parent="Return2"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -266.0
offset_top = -37.5
offset_right = 266.0
offset_bottom = 37.5
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("4_u1d0b")
theme_override_font_sizes/font_size = 60
text = "Return To Main Menu"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="pressed" from="mainLayoutCredits/playerButtons/Minus" to="." method="_on_minus_pressed"]
[connection signal="pressed" from="mainLayoutCredits/playerButtons/Plus" to="." method="_on_plus_pressed"]
[connection signal="pressed" from="Continue" to="." method="_on_continue_pressed"]
[connection signal="pressed" from="Return2" to="Return2" method="_on_pressed" flags=18]

[editable path="mainLayoutCredits/playerButtons"]
